--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/unnamed"
+        android:icon="@drawable/ic_launcher_background"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -21,7 +21,11 @@
         <activity android:name=".gameView"
             android:noHistory="true"/>
 
-        <activity android:name=".result"></activity>
+
+        <activity android:name=".result"
+
+            >
+        </activity>
     </application>
 
 </manifest>
