--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,7 @@
 
 
         <activity android:name=".result"
-
-            >
+            android:theme="@style/AppTheme.CustomTheme">
         </activity>
     </application>
 
